--- a/BookStore/src/app/app.component.html
+++ b/BookStore/src/app/app.component.html
@@ -1,5 +1,17 @@
 <app-nav></app-nav>
 
-<app-footer></app-footer>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <app-book-cart></app-book-cart>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <app-footer></app-footer>
+    </div>
+  </div>
+</div>
 
 <router-outlet></router-outlet>
