--- a/BookStore/src/app/components/book-cart/book-cart.component.html
+++ b/BookStore/src/app/components/book-cart/book-cart.component.html
@@ -1,1 +1,9 @@
-<p>book-cart works!</p>
+<div class="row">
+  <div class="col">
+    <app-filters></app-filters>
+  </div>
+
+  <div class="col">
+    <app-product-list></app-product-list>
+  </div>
+</div>
